WIP refactor Table